--- a/app/views/drivers/_form.html.erb
+++ b/app/views/drivers/_form.html.erb
@@ -104,6 +104,10 @@
     <%= f.check_box :valid %>
   </div>
   <div class="field">
+    <%= f.label :beacon_id %><br>
+    <%= f.text_field :beacon_id %>
+  </div>
+  <div class="field">
     <%= f.label :average_rating %><br>
     <%= f.text_field :average_rating %>
   </div>
