Adjusted db values
Added beacon_id, changed typeid to type_id, and switched the license to
a string.

--- a/app/views/drivers/_form.html.erb
+++ b/app/views/drivers/_form.html.erb
@@ -28,8 +28,8 @@
     <%= f.date_select :dob %>
   </div>
   <div class="field">
-    <%= f.label :typeid %><br>
-    <%= f.text_field :typeid %>
+    <%= f.label :type_id %><br>
+    <%= f.text_field :type_id %>
   </div>
   <div class="field">
     <%= f.label :address %><br>
@@ -65,7 +65,7 @@
   </div>
   <div class="field">
     <%= f.label :license %><br>
-    <%= f.number_field :license %>
+    <%= f.text_field :license %>
   </div>
   <div class="field">
     <%= f.label :phone_number %><br>
