--- a/app/views/drivers/index.html.erb
+++ b/app/views/drivers/index.html.erb
@@ -64,7 +64,7 @@
             <td><%= driver.permit_expiration_date %></td>
             <td><%= driver.permit_number %></td>
     <!--    <td><%= driver.dob %></td>
-            <td><%= driver.typeid %></td>
+            <td><%= driver.type_id %></td>
             <td><%= driver.address %></td>
             <td><%= driver.city %></td>
             <td><%= driver.state %></td>
