--- a/app/views/drivers/show.html.erb
+++ b/app/views/drivers/show.html.erb
@@ -22,7 +22,7 @@
 
 <p>
   <strong>Type Id:</strong>
-  <%= @driver.typeid %>
+  <%= @driver.type_id %>
 </p>
 
 <p>
@@ -113,6 +113,11 @@
 <p>
   <strong>Valid:</strong>
   <%= @driver.valid %>
+</p>
+
+<p>
+  <strong>Beacon Id:</strong>
+  <%= @driver.beacon_id %>
 </p>
 
 <p>
