--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
 
         <div class="navbar-collapse"> 
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Hello, username!</a>
+              <li><a href="#">Hello, <% if user_signed_in? %><%= current_user.email %>!<% end %></a>
             <li><%= link_to "Home", '#' %></li>
             <li><%= link_to "Help", '#' %></li>
             <li><%= link_to "Sign out", '#' %></li>
