--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,9 @@
-<h2>Forgot your password?</h2>
+<% provide(:title, 'Forgot Password') %>
+
+<h2 class="user-form-heading">Forgot your password?</h2>
 
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= devise_error_messages! %>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
-
-  <div><%= f.submit "Send me reset password instructions" %></div>
+    <%= f.email_field :email, :autofocus => true, :class =>'form-control', :placeholder => "Enter your email address" %>
+    <%= f.submit "Reset password", :class => 'btn btn-lg btn-primary btn-block'  %>
 <% end %>
-
-<%= render "devise/shared/links" %>
