--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,21 +1,20 @@
-<h2>Sign up</h2>
-
+<h2 class="user-form-heading">Sign up</h2>
+<form class="form-horizontal">
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :username %><br />
-  <%= f.text_field :username, :autofocus => true %></div>
+  <%= f.label :username %>
+  <%= f.text_field :username, :autofocus => true, :class=>'form-control', :placeholder=>'Username' %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
+  <%= f.label :email %>
+  <%= f.email_field :email, :class=>'form-control', :placeholder=>'Email address' %>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+  <%= f.label :password %>
+  <%= f.password_field :password, :class=>'form-control', :placeholder=>'Password' %>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.submit "Sign up" %></div>
+  <%= f.label :password_confirmation %>
+  <%= f.password_field :password_confirmation, :class=>'form-control', :placeholder=>'Confirm password' %>
+    
+  <%= f.submit "Sign up", :class=>'btn btn-lg btn-primary pull-right' %><br>
 <% end %>
-
-<%= render "devise/shared/links" %>
+</form>
