--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,6 +1,5 @@
 <% provide(:title, 'Forgot Password') %>
-
-<h2 class="user-form-heading">Forgot your password?</h2>
+<% provide(:heading, 'Forgot your password?') %>
 
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= devise_error_messages! %>
