--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,4 +1,5 @@
-<h2>Resend unlock instructions</h2>
+<% provide(:title, 'Unlock instructions') %>
+<% provide(:heading, 'Resend unlock instructions') %>
 
 <%= form_for(resource, :as => resource_name, :url => unlock_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= devise_error_messages! %>
@@ -6,6 +7,6 @@
   <div><%= f.label :username %><br />
   <%= f.text_field :username, :autofocus => true %></div>
 
-  <div><%= f.submit "Resend unlock instructions" %></div>
+  <div><%= f.submit "Resend unlock instructions", :class => 'btn btn-lg btn-primary' %></div>
 <% end %>
 
