--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#" id="logo">TaxiDash Nashville</a>
+          <a class="navbar-brand" href="#"><% render 'layouts/logo' %></a>
         </div> <!--navbar-header-->
 
         <div class="navbar-collapse"> 
