--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,15 +13,9 @@
 
   <body>
     <% if user_signed_in? %>
-        <%= render 'layouts/header' %>
-        <%= render 'layouts/sidebar' %>
-        <div class="col-sm-9 col-md-10 main">
-            <%= yield %>            
-        </div>
+        <%= render 'layouts/general' %>
     <% else %>
-        <form class="user-form well well-lg col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4">
-            <%= yield %>
-        </form>
+        <%= render 'layouts/users' %>
     <% end %>
 
   </body>
