--- a/app/views/drivers/_form.html.erb
+++ b/app/views/drivers/_form.html.erb
@@ -11,110 +11,173 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :first_name %><br>
-    <%= f.text_field :first_name %>
-  </div>
-  <div class="field">
-    <%= f.label :middle_name %><br>
-    <%= f.text_field :middle_name %>
-  </div>
-  <div class="field">
-    <%= f.label :last_name %><br>
-    <%= f.text_field :last_name %>
-  </div>
+  <table>
+  		<tr>
+			<td>
+			  <div class="field">
+				<%= f.label :first_name %><br>
+				<%= f.text_field :first_name, :size => 10 %>
+			  </div>
+			</td>
+			<td> &nbsp <td>
+			<td>			
+			  <div class="field">
+				<%= f.label :middle_name %><br>
+				<%= f.text_field :middle_name, :size => 10 %>
+			  </div>
+			</td>
+			<td> &nbsp <td>
+  			<td>
+			  <div class="field">
+				<%= f.label :last_name %><br>
+				<%= f.text_field :last_name, :size => 15 %>
+			  </div>
+			</td>
+  		</tr>
+  </table>
+  
   <div class="field">
     <%= f.label :dob %><br>
-    <%= f.date_select :dob %>
+    <%= f.date_select :dob, :start_year => 1950%>
   </div>
   <div class="field">
     <%= f.label :type_id %><br>
-    <%= f.text_field :type_id %>
+    <%= f.radio_button :type_id, "Taxi", :checked => "checked"%><strong>Taxi</strong><br>
+    <%= f.radio_button :type_id, "Wrecker"%><strong>Wrecker</strong>
   </div>
   <div class="field">
     <%= f.label :address %><br>
     <%= f.text_field :address %>
   </div>
-  <div class="field">
-    <%= f.label :city %><br>
-    <%= f.text_field :city %>
-  </div>
-  <div class="field">
-    <%= f.label :state %><br>
-    <%= f.text_field :state %>
-  </div>
-  <div class="field">
-    <%= f.label :zipcode %><br>
-    <%= f.number_field :zipcode %>
-  </div>
+  <table>
+  	<tr>
+  		<td>
+		  <div class="field">
+			<%= f.label :city %><br>
+			<%= f.text_field :city, :size => 15 %>
+		  </div>
+		</td>
+		<td> &nbsp <td>
+		<td>
+		  <div class="field">
+			<%= f.label :state %><br>
+			<%= f.select(:state, [ "TN", "AK", "AL", "AR", "AZ", "CA", "CO", "CT", "DC", "DE", "FL", "GA", "HI", "IA", "ID", "IL", "IN", "KS", "KY", "LA", "MA", "MD", "ME", "MI", "MN", "MO", "MS", "MY", "NC", "ND", "NE", "NH", "NJ", "NM", "NV", "NY", "OH", "OK", "OR", "PA", "RI", "SC", "SD", "TX", "UT", "VA", "VT", "WA", "WI", "WV", "WY"]) %>
+		  </div>
+		</td>
+		<td> &nbsp <td>
+		<td>
+		  <div class="field">
+			<%= f.label :zipcode %><br>
+			<%= f.number_field :zipcode, :size => 4%>
+		  </div>
+		</td>
+	</tr>
+  </table>
   <div class="field">
     <%= f.label :race %><br>
-    <%= f.text_field :race %>
+	<%= f.select(:race, [ "African American",  "Asian", "Caucasian", "Hispanic", "Indian", "Native American", "Other"], {include_blank: true}) %>
   </div>
   <div class="field">
     <%= f.label :sex %><br>
-    <%= f.text_field :sex %>
+    <%= f.radio_button :sex, "male" %> <strong>Male</strong><br>
+    <%= f.radio_button :sex, "female" %> <strong>Female</strong>
   </div>
-  <div class="field">
-    <%= f.label :height %><br>
-    <%= f.number_field :height %>
-  </div>
-  <div class="field">
-    <%= f.label :weight %><br>
-    <%= f.number_field :weight %>
-  </div>
+  <table>
+  	<tr>
+  		<td>
+		  <div class="field">
+			<%= f.label :height %><br>
+			<%= f.number_field :height, :size => 4 %>
+		  </div>
+  		</td>
+  		<td> &nbsp <td>
+  		<td>
+		  <div class="field">
+			<%= f.label :weight %><br>
+			<%= f.number_field :weight, :size => 4 %>
+		  </div>
+  		</td>
+  	</tr>
+  </table>
   <div class="field">
     <%= f.label :license %><br>
     <%= f.text_field :license %>
   </div>
   <div class="field">
     <%= f.label :phone_number %><br>
-    <%= f.number_field :phone_number %>
+    <%= f.telephone_field :phone_number, :size => 10 %>
   </div>
   <div class="field">
     <%= f.label :training_completion_date %><br>
     <%= f.date_select :training_completion_date %>
   </div>
-  <div class="field">
-    <%= f.label :permit_expiration_date %><br>
-    <%= f.date_select :permit_expiration_date %>
-  </div>
-  <div class="field">
-    <%= f.label :permit_number %><br>
-    <%= f.number_field :permit_number %>
-  </div>
+  <table>
+  	<tr>
+  		<td>
+  		  <div class="field">
+			<%= f.label :permit_number %><br>
+			<%= f.number_field :permit_number %>
+		  </div>
+  		</td>
+  		<td> &nbsp <td>
+  		<td>
+		  <div class="field">
+			<%= f.label :permit_expiration_date %><br>
+			<%= f.date_select :permit_expiration_date %>
+		  </div>
+  		</td>
+  	</tr>
+  </table>
   <div class="field">
     <%= f.label :status %><br>
     <%= f.text_field :status %>
   </div>
-  <div class="field">
-    <%= f.label :owner %><br>
-    <%= f.text_field :owner %>
-  </div>
-  <div class="field">
-    <%= f.label :company_name %><br>
-    <%= f.text_field :company_name %>
-  </div>
-  <div class="field">
-    <%= f.label :physical_expiration_date %><br>
-    <%= f.date_select :physical_expiration_date %>
-  </div>
-  <div class="field">
-    <%= f.label :valid %><br>
-    <%= f.check_box :valid %>
-  </div>
+  <table>
+  	<tr>
+  		<td>
+		  <div class="field">
+			<%= f.label :owner %><br>
+			<%= f.text_field :owner %>
+		  </div>
+  		</td>
+  		<td> &nbsp <td>
+  		<td>
+		  <div class="field">
+			<%= f.label :company_name %><br>
+			<%= f.text_field :company_name %>
+		  </div>
+  		</td>
+  	</tr>
+  </table>
+  <table>
+  	<tr>
+  		<td>
+		  <div class="field">
+			<%= f.label :physical_expiration_date %><br>
+			<%= f.date_select :physical_expiration_date %>
+		  </div>
+  		</td>
+  		<td> &nbsp &nbsp &nbsp &nbsp <td>
+  		<td>
+		  <div class="field">
+			<%= f.label :valid %><br>
+			<%= f.check_box :valid %>
+		  </div>
+  		</td>
+  	</tr>
+  </table>
   <div class="field">
     <%= f.label :beacon_id %><br>
     <%= f.text_field :beacon_id %>
   </div>
-  <div class="field">
+<!--  <div class="field">
     <%= f.label :average_rating %><br>
     <%= f.text_field :average_rating %>
   </div>
   <div class="field">
     <%= f.label :total_ratings %><br>
     <%= f.number_field :total_ratings %>
-  </div>
+  </div> -->
   <div class="actions">
     <%= f.submit %>
   </div>
