--- a/app/views/layouts/_users.html.erb
+++ b/app/views/layouts/_users.html.erb
@@ -1,9 +1,15 @@
 <div class="col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4 col-xs-8 col-xs-offset-2">
     <%= render 'layouts/logo_inverse' %>
-    <form class="user-form well well-lg">
+    <div class="user-form well well-lg">
         <h2 class="user-form-heading"><%= yield(:heading) %></h2>
         <%= yield %>
         <br />
-    </form>
+    </div>
+    
+<div class="text-center">
+    <%= notice %> 
+    <%= alert %>
+</div>   
+ 
 </div>
 
