--- a/app/views/drivers/index.html.erb
+++ b/app/views/drivers/index.html.erb
@@ -1,6 +1,5 @@
 <% provide(:title, 'Drivers') %>
 
-<div class="col-sm-11 col-md-11 main">
     <h1 class="page-header">Driver Dashboard</h1>
     <p><div class="row">
     <div class="col-md-10 col-sm-10">
@@ -80,8 +79,7 @@
             <td><%= driver.physical_expiration_date %></td>
             <td><%= driver.valid %></td>
             <td><%= driver.average_rating %></td>-->
-            <td><%= link_to '', driver %>
-                <%= link_to '', edit_driver_path(driver) %>    
+            <td><%= link_to '', edit_driver_path(driver) %>    
                 <%= link_to 'Destroy', driver, method: :delete, 
                           data: { confirm: 'Are you sure you want to delete this driver?' } %>
                 </td>
@@ -92,5 +90,3 @@
     </div>
     <br>
 
-
-</div>
