--- a/app/views/layouts/_general.html.erb
+++ b/app/views/layouts/_general.html.erb
@@ -1,5 +1,11 @@
 <%= render 'layouts/header' %>
-<%= render 'layouts/sidebar' %>
-<div class="col-sm-9 col-md-10 main">
-    <%= yield %>            
+
+<div class = "row">
+    <div class="col-sm-3 col-md-2 sidebar">
+        <%= render 'layouts/sidebar' %>
+    </div>
+    <div class="col-sm-9 col-md-9 main col-xs-offset-">
+        <%= yield %>            
+    </div>
 </div>
+
