--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,15 +16,12 @@
 
 /* User sign in and sign up forms. */
 
-.user-form {
-  max-width: 300px;
-  padding: 19px 29px 29px;
-  margin: 0 auto 20px;
+
+.user-form .user-form-heading {
+  margin-bottom: 15px;
+  margin-top: 0px;
 }
-.user-form .form-signin-heading,
-.user-form .checkbox {
-  margin-bottom: 10px;
-}
+
 .user-form input[type="text"],
 .user-form input[type="email"],
 .user-form input[type="password"] {
