--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,4 +1,5 @@
-<h2>Resend confirmation instructions</h2>
+<% provide(:title, 'Resend Confirmation') %>
+<% provide(:heading, 'Resend confirmation instructions') %>
 
 <%= form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= devise_error_messages! %>
@@ -9,4 +10,3 @@
   <div><%= f.submit "Resend confirmation instructions" %></div>
 <% end %>
 
-<%= render "devise/shared/links" %>
