--- a/app/views/drivers/index.html.erb
+++ b/app/views/drivers/index.html.erb
@@ -1,6 +1,5 @@
 <% provide(:title, 'Drivers') %>
 
-<div class="col-sm-11 col-md-11 main">
     <h1 class="page-header">Driver Dashboard</h1>
     <p><div class="row">
     <div class="col-md-10 col-sm-10">
@@ -58,7 +57,6 @@
       <tbody>
         <% @drivers.each do |driver| %>
           <tr>
-            <%= link_to '', driver %> <!--click to show Driver Profile-->
             <td><%= driver.last_name %>, <%= driver.first_name %> <%= driver.middle_name %></td>
             <td><%= driver.company_name %></td>
             <td><%= driver.permit_expiration_date %></td>
@@ -83,7 +81,7 @@
             <td><%= driver.average_rating %></td>-->
             <td><%= link_to '', edit_driver_path(driver) %>    
                 <%= link_to 'Destroy', driver, method: :delete, 
-                          data: { confirm: 'Are you sure you want to delete this driver data?' } %>
+                          data: { confirm: 'Are you sure you want to delete this driver?' } %>
                 </td>
           </tr>
         <% end %>
@@ -92,5 +90,3 @@
     </div>
     <br>
 
-
-</div>
