--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-    <header class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<header class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -7,18 +7,18 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#" id="logo">TaxiDash Nashville</a>
+          <a class="navbar-brand" href="#"><% render 'layouts/logo' %></a>
         </div> <!--navbar-header-->
 
         <div class="navbar-collapse"> 
           <ul class="nav navbar-nav navbar-right">
-              <li><a href="#">Hello, <% if user_signed_in? %><%= current_user.email %>!<% end %></a>
+            <% if user_signed_in? %><li><a href="#">Welcome, <%= current_user.email %>!</a></li><% end %>
             <li><%= link_to "Home", '#' %></li>
             <li><%= link_to "Help", '#' %></li>
-            <li><%= link_to "Sign out", '#' %></li>
+            <li><%= render 'layouts/user_widget' %></li>
           </ul>
         </div><!--navbar-collapse-->
     </div><!--container-fluid-->
-    </header><!--navbar-->
+</header><!--navbar-->
 
 
