Adding Will's changes.

--- a/app/views/drivers/show.html.erb
+++ b/app/views/drivers/show.html.erb
@@ -111,7 +111,7 @@
 				</tr>
 
 				<tr>
-				  	<th>Training completion date: </th>
+				  	<th>Training completion date: &nbsp </th>
 				  	<td><var><%= @driver.training_completion_date %></var></td>
 				</tr>
 
@@ -169,3 +169,4 @@
 		</table>
 
 </div>	
+
