--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
   <%= devise_error_messages! %>
 
   <%= f.label :username %>
-  <%= f.text_field :username, :autofocus => true, :class=>'form-control', :placeholder=>'Username' %>
+  <%= f.text_field :username, :autofocus => true, :placeholder=>'Username' %>
 
   <%= f.label :email %>
   <%= f.email_field :email, :class=>'form-control', :placeholder=>'Email address' %>
