--- a/app/views/drivers/_form.html.erb
+++ b/app/views/drivers/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_for(@driver) do |f| %>
+<div class="form">
   <% if @driver.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@driver.errors.count, "error") %> prohibited this driver from being saved:</h2>
@@ -12,28 +13,28 @@
   <% end %>
 
   <table>
-  		<tr>
-			<td>
-			  <div class="field">
-				<%= f.label :first_name %><br>
-				<%= f.text_field :first_name, :size => 10 %>
-			  </div>
-			</td>
-			<td> &nbsp <td>
-			<td>			
-			  <div class="field">
-				<%= f.label :middle_name %><br>
-				<%= f.text_field :middle_name, :size => 10 %>
-			  </div>
-			</td>
-			<td> &nbsp <td>
-  			<td>
-			  <div class="field">
-				<%= f.label :last_name %><br>
-				<%= f.text_field :last_name, :size => 15 %>
-			  </div>
-			</td>
-  		</tr>
+   <tr>
+<td>
+<div class="field">
+<%= f.label :first_name %><br>
+<%= f.text_field :first_name, :size => 10 %>
+</div>
+</td>
+<td> &nbsp <td>
+<td>	
+<div class="field">
+<%= f.label :middle_name %><br>
+<%= f.text_field :middle_name, :size => 10 %>
+</div>
+</td>
+<td> &nbsp <td>
+   <td>
+<div class="field">
+<%= f.label :last_name %><br>
+<%= f.text_field :last_name, :size => 15 %>
+</div>
+</td>
+   </tr>
   </table>
   
   <div class="field">
@@ -50,32 +51,32 @@
     <%= f.text_field :address %>
   </div>
   <table>
-  	<tr>
-  		<td>
-		  <div class="field">
-			<%= f.label :city %><br>
-			<%= f.text_field :city, :size => 15 %>
-		  </div>
-		</td>
-		<td> &nbsp <td>
-		<td>
-		  <div class="field">
-			<%= f.label :state %><br>
-			<%= f.select(:state, [ "TN", "AK", "AL", "AR", "AZ", "CA", "CO", "CT", "DC", "DE", "FL", "GA", "HI", "IA", "ID", "IL", "IN", "KS", "KY", "LA", "MA", "MD", "ME", "MI", "MN", "MO", "MS", "MY", "NC", "ND", "NE", "NH", "NJ", "NM", "NV", "NY", "OH", "OK", "OR", "PA", "RI", "SC", "SD", "TX", "UT", "VA", "VT", "WA", "WI", "WV", "WY"]) %>
-		  </div>
-		</td>
-		<td> &nbsp <td>
-		<td>
-		  <div class="field">
-			<%= f.label :zipcode %><br>
-			<%= f.number_field :zipcode, :size => 4%>
-		  </div>
-		</td>
-	</tr>
+   <tr>
+   <td>
+<div class="field">
+<%= f.label :city %><br>
+<%= f.text_field :city, :size => 15 %>
+</div>
+</td>
+<td> &nbsp <td>
+<td>
+<div class="field">
+<%= f.label :state %><br>
+<%= f.select(:state, [ "TN", "AK", "AL", "AR", "AZ", "CA", "CO", "CT", "DC", "DE", "FL", "GA", "HI", "IA", "ID", "IL", "IN", "KS", "KY", "LA", "MA", "MD", "ME", "MI", "MN", "MO", "MS", "MY", "NC", "ND", "NE", "NH", "NJ", "NM", "NV", "NY", "OH", "OK", "OR", "PA", "RI", "SC", "SD", "TX", "UT", "VA", "VT", "WA", "WI", "WV", "WY"]) %>
+</div>
+</td>
+<td> &nbsp <td>
+<td>
+<div class="field">
+<%= f.label :zipcode %><br>
+<%= f.number_field :zipcode, :size => 4%>
+</div>
+</td>
+</tr>
   </table>
   <div class="field">
     <%= f.label :race %><br>
-	<%= f.select(:race, [ "African American",  "Asian", "Caucasian", "Hispanic", "Indian", "Native American", "Other"], {include_blank: true}) %>
+<%= f.select(:race, [ "African American", "Asian", "Caucasian", "Hispanic", "Indian", "Native American", "Other"], {include_blank: true}) %>
   </div>
   <div class="field">
     <%= f.label :sex %><br>
@@ -83,21 +84,21 @@
     <%= f.radio_button :sex, "female" %> <strong>Female</strong>
   </div>
   <table>
-  	<tr>
-  		<td>
-		  <div class="field">
-			<%= f.label :height %><br>
-			<%= f.number_field :height, :size => 4 %>
-		  </div>
-  		</td>
-  		<td> &nbsp <td>
-  		<td>
-		  <div class="field">
-			<%= f.label :weight %><br>
-			<%= f.number_field :weight, :size => 4 %>
-		  </div>
-  		</td>
-  	</tr>
+   <tr>
+   <td>
+<div class="field">
+<%= f.label :height %><br>
+<%= f.number_field :height, :size => 4 %>
+</div>
+   </td>
+   <td> &nbsp <td>
+   <td>
+<div class="field">
+<%= f.label :weight %><br>
+<%= f.number_field :weight, :size => 4 %>
+</div>
+   </td>
+   </tr>
   </table>
   <div class="field">
     <%= f.label :license %><br>
@@ -112,73 +113,74 @@
     <%= f.date_select :training_completion_date %>
   </div>
   <table>
-  	<tr>
-  		<td>
-  		  <div class="field">
-			<%= f.label :permit_number %><br>
-			<%= f.number_field :permit_number %>
-		  </div>
-  		</td>
-  		<td> &nbsp <td>
-  		<td>
-		  <div class="field">
-			<%= f.label :permit_expiration_date %><br>
-			<%= f.date_select :permit_expiration_date %>
-		  </div>
-  		</td>
-  	</tr>
+   <tr>
+   <td>
+   <div class="field">
+<%= f.label :permit_number %><br>
+<%= f.number_field :permit_number %>
+</div>
+   </td>
+   <td> &nbsp <td>
+   <td>
+<div class="field">
+<%= f.label :permit_expiration_date %><br>
+<%= f.date_select :permit_expiration_date %>
+</div>
+   </td>
+   </tr>
   </table>
   <div class="field">
     <%= f.label :status %><br>
     <%= f.text_field :status %>
   </div>
   <table>
-  	<tr>
-  		<td>
-		  <div class="field">
-			<%= f.label :owner %><br>
-			<%= f.text_field :owner %>
-		  </div>
-  		</td>
-  		<td> &nbsp <td>
-  		<td>
-		  <div class="field">
-			<%= f.label :company_name %><br>
-			<%= f.text_field :company_name %>
-		  </div>
-  		</td>
-  	</tr>
+   <tr>
+   <td>
+<div class="field">
+<%= f.label :owner %><br>
+<%= f.text_field :owner %>
+</div>
+   </td>
+   <td> &nbsp <td>
+   <td>
+<div class="field">
+<%= f.label :company_name %><br>
+<%= f.text_field :company_name %>
+</div>
+   </td>
+   </tr>
   </table>
   <table>
-  	<tr>
-  		<td>
-		  <div class="field">
-			<%= f.label :physical_expiration_date %><br>
-			<%= f.date_select :physical_expiration_date %>
-		  </div>
-  		</td>
-  		<td> &nbsp &nbsp &nbsp &nbsp <td>
-  		<td>
-		  <div class="field">
-			<%= f.label :valid %><br>
-			<%= f.check_box :valid %>
-		  </div>
-  		</td>
-  	</tr>
+   <tr>
+   <td>
+<div class="field">
+<%= f.label :physical_expiration_date %><br>
+<%= f.date_select :physical_expiration_date %>
+</div>
+   </td>
+   <td> &nbsp &nbsp &nbsp &nbsp <td>
+   <td>
+<div class="field">
+<%= f.label :valid %><br>
+<%= f.check_box :valid %>
+</div>
+   </td>
+   </tr>
   </table>
   <div class="field">
     <%= f.label :beacon_id %><br>
     <%= f.text_field :beacon_id %>
   </div>
-<!--  <div class="field">
-    <%= f.label :average_rating %><br>
-    <%= f.text_field :average_rating %>
-  </div>
-  <div class="field">
-    <%= f.label :total_ratings %><br>
-    <%= f.number_field :total_ratings %>
-  </div> -->
+<!-- <div class="field">
+<%= f.label :average_rating %><br>
+<%= f.text_field :average_rating %>
+</div>
+<div class="field">
+<%= f.label :total_ratings %><br>
+<%= f.number_field :total_ratings %>
+</div> -->
   <div class="actions">
     <%= f.submit %>
   </div>
+</div>
 <% end %>
