--- a/app/views/drivers/index.html.erb
+++ b/app/views/drivers/index.html.erb
@@ -1,9 +1,9 @@
 <% provide(:title, 'Drivers') %>
+<% provide(:heading, 'Driver Dashboard') %>
 
-    <h1 class="page-header">Driver Dashboard</h1>
     <p><div class="row">
     <div class="col-md-10 col-sm-10">
-        <form class="form" role="search">
+        <div class="form" role="search">
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Search...">
                     <span class="input-group-btn">
@@ -12,15 +12,15 @@
                         </button>
                     </span>
             </div><!--input-group -->
-        </form>
+        </div>
     </div>
     <div class="col-md-2 col-sm-2">
-            <%= button_to(new_driver_path, :class => "btn btn-default", role: "button", title: "New Driver", method: :get) do %>            
+            <%= button_to(new_driver_path, :class => "btn btn-default", :method => :get) do %>            
                 <span class="glyphicon glyphicon-plus"></span> Add Driver
             <% end %>
     </div>
     </div></p>
-    <!--          <h2 class="sub-header">Section title</h2> -->
+
     <div class="table-responsive">
     <table class="table table-striped table-hover">
       <thead>
