--- a/app/views/layouts/_general.html.erb
+++ b/app/views/layouts/_general.html.erb
@@ -1,11 +1,10 @@
 <%= render 'layouts/header' %>
 
-<div class = "row">
-    <div class="col-sm-3 col-md-2 sidebar">
-        <%= render 'layouts/sidebar' %>
-    </div>
-    <div class="col-sm-9 col-md-9 main col-xs-offset-">
-        <%= yield %>            
-    </div>
+<div class="col-sm-2 col-md-2 col-sm-offset-1 sidebar">
+    <%= render 'layouts/sidebar' %>            
+</div>    
+<div class="col-sm-8 col-md-8 col-sm-offset-3 main">
+    <h1 class="page-header"><%= yield(:heading) %></h1>
+    <%= yield %>            
 </div>
 
