--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,24 +1,39 @@
-<header class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#"><% render 'layouts/logo' %></a>
-        </div> <!--navbar-header-->
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" id="logo" href=""><%= render 'layouts/logo' %></a>
+    </div> <!--navbar-header-->
 
-        <div class="navbar-collapse"> 
-          <ul class="nav navbar-nav navbar-right">
-            <% if user_signed_in? %><li><a href="#">Welcome, <%= current_user.email %>!</a></li><% end %>
-            <li><%= link_to "Home", '#' %></li>
-            <li><%= link_to "Help", '#' %></li>
-            <li><%= render 'layouts/user_widget' %></li>
+    <div class="navbar-collapse collapse"> 
+      <ul class="nav navbar-nav">
+        <li><%= link_to "Home", drivers_path %></li>
+        <li><%= link_to "About", '#' %></li>
+        <li><%= link_to "Help", '#' %></li>
+       <!-- <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li class="dropdown-header">Nav header</li>
+            <li><a href="#">Separated link</a></li>
+            <li><a href="#">One more separated link</a></li>
           </ul>
-        </div><!--navbar-collapse-->
-    </div><!--container-fluid-->
-</header><!--navbar-->
-
-
+        </li>-->
+      </ul> 
+      <ul class="nav navbar-nav navbar-right">
+        <% if user_signed_in? %>
+          <li><%= link_to "Welcome, #{current_user.username}!", edit_user_registration_path %></li>
+        <% end %>
+        <li><%= render 'layouts/user_widget' %></li>
+      </ul>
+    </div><!--navbar-collapse-->
+  </div><!--container-fluid-->
+</div><!--navbar-->
