--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,11 +4,17 @@
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
+  <%= f.label :first_name %>
+  <%= f.text_field :first_name, :autofocus => true, :class=>'form-control', :placeholder=>'John' %>
+
+  <%= f.label :last_name %>
+  <%= f.text_field :last_name, :autofocus => true, :class=>'form-control', :placeholder=>'Smith' %>
+
   <%= f.label :username %>
   <%= f.text_field :username, :autofocus => true, :class=>'form-control', :placeholder=>'Username' %>
 
   <%= f.label :email %>
-  <%= f.email_field :email, :class=>'form-control', :placeholder=>'Email address' %>
+  <%= f.text_field :email, :autofocus => true, :class=>'form-control', :placeholder=>'Email' %>
 
   <%= f.label :password %>
   <%= f.password_field :password, :class=>'form-control', :placeholder=>'Password' %>
