--- a/app/views/drivers/index.html.erb
+++ b/app/views/drivers/index.html.erb
@@ -80,6 +80,7 @@
             <td><%= driver.valid %></td>
             <td><%= driver.average_rating %></td>-->
             <td><%= link_to '', edit_driver_path(driver) %>    
+                <%= link_to 'View', show_driver_path(driver)%>
                 <%= link_to 'Destroy', driver, method: :delete, 
                           data: { confirm: 'Are you sure you want to delete this driver?' } %>
                 </td>
