--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -43,6 +43,7 @@
               <td><%= user.last_sign_in_at.nil? ? "N/A" : user.last_sign_in_at.in_time_zone("America/Chicago") %></td>
               <td><%= link_to '', edit_user_path(user) %>    
               <%= link_to 'Edit', edit_user_registration_path(user) %>
+              <%= link_to 'View', show_user_path(user) %>
               <%= if user.id != @current_user.id then link_to 'Destroy', user, method: :delete, 
                   data: { confirm: 'Are you sure you want to delete this user?' } end %>
           </td>
