--- a/app/views/drivers/new.html.erb
+++ b/app/views/drivers/new.html.erb
@@ -1,3 +1,5 @@
+<% provide(:title, "New Driver") %>
+
 <h1 class="page-header">New driver
 
 <div class="btn" class="col-md-2 col-sm-2">
@@ -7,7 +9,7 @@
 </div>
 </h1>
 
-<%= render 'form' %>
+<%= render 'drivers/form' %>
 
 <!--
 <%= link_to 'Back', drivers_path %>
