--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,17 +4,23 @@
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :first_name %><br />
-  <%= f.text_field :first_name, :autofocus => true %></div>
-
-  <div><%= f.label :last_name %><br />
-  <%= f.text_field :last_name, :autofocus => true %></div>
-
-  <div><%= f.label :username %><br />
-  <%= f.text_field :username, :autofocus => true %></div>
-
-  <div><%= f.label :email %><br />
-  <%= f.text_field :email, :autofocus => true %></div>
+<div class = "form-horizontal">
+  <div class="form-group">
+    <%= f.label :first_name, :class=>"col-sm-3 control-label" %>
+    <div class="col-sm-5"><%= f.text_field :first_name, :class => "form-control", :autofocus => true %></div>
+  </div>
+  <div class="form-group">
+    <%= f.label :last_name, :class=>"col-sm-3 control-label" %>
+    <div class="col-sm-5"><%= f.text_field :last_name, :class => "form-control" %></div>
+  </div>
+  <div class="form-group">
+    <%= f.label :username, :class=>"col-sm-3 control-label" %>
+    <div class="col-sm-5"><%= f.text_field :username, :class => "form-control" %></div>
+  </div>
+  <div class="form-group">
+    <%= f.label :email, :class=>"col-sm-3 control-label" %>
+    <div class="col-sm-5"><%= f.text_field :email, :class => "form-control" %></div>
+  </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div class="form-group">Currently waiting confirmation for: <%= resource.unconfirmed_username %></div>
@@ -22,35 +28,35 @@
   
  
   <div class="form-group">
-    <%= f.label 'New Password', :class=>"col-sm-1 control-label" %>
+    <%= f.label 'New Password', :class=>"col-sm-3 control-label" %>
     <div class="col-sm-5"><%= f.password_field :password, :class => "form-control", :autocomplete => "off" %></div>
   </div>
   <div class="form-group">
-    <%= f.label :password_confirmation, :class=>"col-sm-1 control-label"  %>
+    <%= f.label :password_confirmation, :class=>"col-sm-3 control-label"  %>
     <div class="col-sm-5"><%= f.password_field :password_confirmation, :class => "form-control" %></div>
   </div>
   <div class="form-group">
-    <%= f.label :current_password, :class=>"col-sm-1 control-label"  %>
+    <%= f.label :current_password, :class=>"col-sm-3 control-label"  %>
     <div class="col-sm-5"><%= f.password_field :current_password, :class => "form-control" %></div>
   </div>
   <div class="form-group">
-    <div class="col-sm-offset-1 col-sm-10">
+    <div class="col-sm-offset-3 col-sm-7">
         <%= f.submit "Update", :class=>"btn btn-primary" %>
     </div>
   </div>
 
 <hr>
   <div class="form-group">
-    <div class="col-sm-offset-1 col-sm-10">
+    <div class="col-sm-offset-3 col-sm-7">
         <%= button_to "Delete my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :class=>"btn btn-danger", :method => :delete %>
     </div>
   </div>
   <hr>
   <div class="form-group">
-    <div class="col-sm-offset-1 col-sm-10">
+    <div class="col-sm-offset-3 col-sm-7">
         <p><%= link_to "Back", :back %></p>
     </div>
   </div>
 </div>
-
+</div>
 <% end %>
