--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,9 +1,9 @@
 
 <div id="navbar_sidebar" class="container-fluid">
       <ul class="nav nav-sidebar">
-        <li class="active"><%= link_to "Overview", drivers_path %></li>
-        <li><a href="#">Reports</a></li>
-        <li><a href="#">Analytics</a></li>
-        <li><a href="#">Export</a></li>
-      </ul>
+        <li class= <%= controller.controller_path == 'drivers' ? 'active' : '' %> ><%= link_to "Driver Dashboard", drivers_path %></li>
+      <% if current_user.try(:admin?) %>
+          <li class= <%= controller.controller_path == 'users' ? 'active' : '' %> ><%= link_to "User Dashboard", users_path %></li>
+        </ul>
+      <% end %>
 </div>
