--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Users') %>
+<% provide(:heading, 'User Dashboard') %>
 
-    <h1 class="page-header">User Dashboard</h1>
     <p><div class="row">
     <div class="col-md-10 col-sm-10">
         <form class="form" role="search">
@@ -42,10 +42,26 @@
               <td><%= user.username %> <%= user.admin ? "(ADMIN)" : ""%></td>
               <td><%= user.last_sign_in_at.nil? ? "N/A" : user.last_sign_in_at.in_time_zone("America/Chicago") %></td>
               <td><%= link_to '', edit_user_path(user) %>    
-              <%= link_to 'Edit', edit_user_registration_path(user) %>
-              <%= link_to 'View', show_user_path(user) %>
-              <%= if user.id != @current_user.id then link_to 'Destroy', user, method: :delete, 
-                  data: { confirm: 'Are you sure you want to delete this user?' } end %>
+                  <div class="btn-group">
+                      <div class="btn-group">
+                          <%= button_to(show_user_path(user), :class => "btn btn-mini", title: "View", method: :get) do %>
+                            <span class="glyphicon glyphicon-eye-open"></span>
+                          <% end %>
+                      </div>
+                      <div class="btn-group">
+                          <%= button_to(edit_user_registration_path(user) , :class => "btn btn-mini", title: "Edit", method: :get) do %>
+                            <span class="glyphicon glyphicon-pencil"></span>
+                          <% end %>
+                      </div>
+                      <div class="btn-group">
+                            <% if user.id != @current_user.id %>
+                                <%= button_to(show_user_path(user), :class => "btn btn-mini", method: :delete, 
+                                    data: { confirm: 'Are you sure you want to delete this user?' } ) do %>
+                                    <span class="glyphicon glyphicon-trash"></span>
+                                <% end %>
+                            <% end %>
+                      </div>
+                    </div>
           </td>
           </tr>
       <% end %>
