--- a/app/views/drivers/_form.html.erb
+++ b/app/views/drivers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@driver) do |f| %>
+<%= form_for(@driver, :html => {:multipart => true }) do |f| %>
   <% if @driver.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@driver.errors.count, "error") %> prohibited this driver from being saved:</h2>
@@ -24,6 +24,9 @@
       <div class="form-group">
         <%= f.label :last_name, :class => "col-sm-3 control-label" %>
         <div class="col-sm-5"><%= f.text_field :last_name, :class => "form-control" %></div>
+      </div>
+      <div class="form-group">
+        <%= f.file_field :avatar %>
       </div>
       <div class="form-group">
         <%= f.label :dob, :class => "col-sm-3 control-label" %>
