Fixed dob to be Date of Birth

--- a/app/views/drivers/_form.html.erb
+++ b/app/views/drivers/_form.html.erb
@@ -30,7 +30,7 @@
         <div class="col-sm-5"><%= f.file_field :avatar %></div>
       </div>
       <div class="form-group">
-        <%= f.label :dob, :class => "col-sm-3 control-label" %>
+        <div class ="col-sm-3 control-label"><strong>Date of Birth:</strong></div>
         <div class="col-sm-5"><%= f.date_select :dob, :start_year => 1950%></div>
       </div>
       <div class="form-group">
