--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,19 @@
-<% provide(:title, 'Edit') %>
-<% provide(:heading, "Edit #{resource_name.to_s.humanize}") %>
+<% provide(:title, 'Edit User') %>
+<% provide(:heading, "Edit User") %>
 
-<%= form_for(@user, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= devise_error_messages! %>
+<%= form_for(@user, :html => { :method => :put }) do |f| %>
+  <% if @user.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+
+      <ul>
+      <% @user.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
 
 <div class = "form-horizontal">
   <div class="form-group">
@@ -22,11 +33,6 @@
     <div class="col-sm-5"><%= f.text_field :email, :class => "form-control" %></div>
   </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div class="form-group">Currently waiting confirmation for: <%= resource.unconfirmed_username %></div>
-  <% end %>
-  
- 
   <div class="form-group">
     <%= f.label 'New Password', :class=>"col-sm-3 control-label" %>
     <div class="col-sm-5"><%= f.password_field :password, :class => "form-control", :autocomplete => "off" %></div>
@@ -35,28 +41,14 @@
     <%= f.label :password_confirmation, :class=>"col-sm-3 control-label"  %>
     <div class="col-sm-5"><%= f.password_field :password_confirmation, :class => "form-control" %></div>
   </div>
-  <div class="form-group">
-    <%= f.label :current_password, :class=>"col-sm-3 control-label"  %>
-    <div class="col-sm-5"><%= f.password_field :current_password, :class => "form-control" %></div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-3 col-sm-7">
-        <%= f.submit "Update", :class=>"btn btn-primary" %>
-    </div>
-  </div>
-
 <hr>
   <div class="form-group">
     <div class="col-sm-offset-3 col-sm-7">
-        <%= button_to "Delete my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :class=>"btn btn-danger", :method => :delete %>
+       <%= link_to "Back", :back, :class=>"btn btn-primary" %> 
+       <%= f.submit "Update", :class=>"btn btn-primary" %>
     </div>
   </div>
-  <hr>
-  <div class="form-group">
-    <div class="col-sm-offset-3 col-sm-7">
-        <p><%= link_to "Back", :back %></p>
-    </div>
-  </div>
+
 </div>
 </div>
 <% end %>
