--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,7 +15,7 @@
         </form>
     </div>
     <div class="col-md-2 col-sm-2">
-            <%= button_to(new_registration_path("user"), :class => "btn btn-default", role: "button", title: "New User", method: :get) do %>            
+            <%= button_to(new_user_path, :class => "btn btn-default", role: "button", title: "New User", method: :get) do %>            
                 <span class="glyphicon glyphicon-plus"></span> Add User
             <% end %>
     </div>
