Replaced 'owner' with 'vehicle_owner'

--- a/app/views/drivers/_form.html.erb
+++ b/app/views/drivers/_form.html.erb
@@ -101,8 +101,8 @@
         <div class="col-sm-5"><%= f.text_field :status, :class=>"form-control" %></div>
       </div>
       <div class="form-group">
-        <%= f.label :owner, :class => "col-sm-3 control-label" %>
-        <div class="col-sm-5"><%= f.text_field :owner, :class=>"form-control" %></div>
+        <%= f.label :vehicle_owner, :class => "col-sm-3 control-label" %>
+        <div class="col-sm-5"><%= f.text_field :vehicle_owner, :class=>"form-control" %></div>
       </div>
       <div class="form-group">
         <%= f.label :company_name, :class => "col-sm-3 control-label" %>
