Added Import/Export as option for Administrators

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -9,5 +9,8 @@
         <li class= <%= controller.controller_path == 'riders' ? 'active' : '' %> ><%= link_to "Riders", riders_path %></li>    
         <li class= <%= controller.controller_path == 'companies' ? 'active' : '' %> ><%= link_to "Companies", companies_path %></li>    
         <li class= <%= controller.controller_path == 'documents' ? 'active' : '' %> ><%= link_to "Documents", documents_path %></li>    
+        <% if current_user.try(:admin?) %>
+            <li><%= link_to "Import/Export", import_export_path %></li>
+        <% end %>
       </ul>
 </div>
