--- a/app/views/drivers/_form.html.erb
+++ b/app/views/drivers/_form.html.erb
@@ -31,7 +31,7 @@
       </div>
       <div class="form-group">
         <div class ="col-sm-3 control-label"><strong>Date of Birth:</strong></div>
-        <div class="col-sm-5"><%= f.date_select :dob, :start_year => 1950%></div>
+        <div class="col-sm-5"><%= f.date_select :date_of_birth, :start_year => 1950%></div>
       </div>
       <div class="form-group">
         <%= f.label :type_id, :class => "col-sm-3 control-label" %>
@@ -106,7 +106,7 @@
       </div>
       <div class="form-group">
         <%= f.label :company_name, :class => "col-sm-3 control-label" %>
-        <div class="col-sm-5"><%= f.text_field :company_name, :class=>"form-control" %></div>
+        <div class="col-sm-5"><%= f.text_field :company_id, :class=>"form-control" %></div>
       </div>
       <div class="form-group">
         <%= f.label :physical_expiration_date, :class => "col-sm-3 control-label" %>
