--- a/app/views/drivers/show.html.erb
+++ b/app/views/drivers/show.html.erb
@@ -51,7 +51,7 @@
 
 				<tr>
 				  	<th>Date of Birth:</th>
-				  	<td><var><%= @driver.dob %></var></td>
+				  	<td><var><%= @driver.date_of_birth %></var></td>
 				</tr>
 
 				<tr>
@@ -131,12 +131,12 @@
 
 				<tr>
 				  	<th>Owner:</th>
-				  	<td><var><%= @driver.owner %></var></td>
+				  	<td><var><%= @driver.vehicle_owner %></var></td>
 				</tr>
 
 				<tr>
 				  	<th>Company name:</th>
-				  	<td><var><%= @driver.company_name %></var></td>
+				  	<td><var><%= @driver.company.name %></var></td>
 				</tr>
 
 				<tr>
