Added support for basic fraud detection.

--- a/app/views/ratings/_form.html.erb
+++ b/app/views/ratings/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.number_field :driver_id %>
   </div>
   <div class="field">
-    <%= f.label :rider_id %><br>
-    <%= f.number_field :rider_id %>
+    <%= f.label "Rider uuid:" %><br>
+    <%= f.text_field :rider_id %>
   </div>
   <div class="field">
     <%= f.label :rating %><br>
