--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -37,7 +37,7 @@
       <tbody>
         <% @ratings.each do |rating| %>
           <tr>
-            <td><%= rating.driver.last_name << ", " << rating.driver.first_name  %></td>
+            <td><%= rating.driver.last_name %>, <%= rating.driver.first_name  %></td>
             <td><%= rating.driver.company.name %></td>
             <td><%= rating.rating %></td>
             <td><%= rating.comments %></td>
